<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    app:cardBackgroundColor="@color/card_grey"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="6dp">

        <ImageView
            android:id="@+id/edit"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_edit" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/sheet_title_1"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:text="@string/_15_06_2017"
            android:textColor="@color/grey4"
            android:textSize="11sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.01dp"
            android:layout_below="@+id/date"
            android:background="#505050" />

        <TextView
            android:id="@+id/people"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date"
            android:layout_marginTop="6dp"
            android:maxLines="3"
            android:text="@string/add_people"
            android:textColor="@color/grey2"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/people"
            android:gravity="bottom"
            android:text="@string/_00_00"
            android:textColor="@color/grey2"
            android:textSize="15sp" />

    </RelativeLayout>

</android.support.v7.widget.CardView>