<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey0"
    android:orientation="vertical"
    android:paddingLeft="64dp"
    android:paddingRight="64dp"
    android:paddingTop="16dp">

    <EditText

        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frame"
        android:layout_centerHorizontal="true"
        android:hint="@string/description"
        android:inputType="textCapWords"
        android:paddingBottom="16dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHighlight="@color/colorAccent"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:hint="00.00"
        android:inputType="numberDecimal"
        android:paddingBottom="16dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHighlight="@color/colorAccent"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/des_paid_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/amount"
        android:paddingLeft="8dp"
        android:paddingTop="4dp"
        android:text="Paid by"
        android:textColor="@color/grey4"
        android:textSize="11sp" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/des_paid_by"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="2dp"
        android:clickable="true"
        card_view:cardBackgroundColor="#00ffffff"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="4dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="#262626"
            android:gravity="center"
            android:minWidth="66dp"
            android:padding="5dp"
            android:singleLine="true"
            android:text="Jon" />
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/des_invloved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/amount"
        android:paddingRight="8dp"
        android:paddingTop="4dp"
        android:text="@string/paid_for"
        android:textColor="@color/grey4"
        android:textSize="11sp" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_involved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/des_invloved"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="2dp"
        android:clickable="true"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="4dp">

        <TextView
            android:id="@+id/involved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="#262626"
            android:gravity="center"
            android:minWidth="66dp"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/even_split" />
    </android.support.v7.widget.CardView>


    <TextView
        android:id="@+id/add_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/card_involved"
        android:layout_alignRight="@+id/card_involved"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:layout_below="@+id/card_involved"
        android:layout_marginTop="32dp"
        android:padding="8dp"
        android:text="@string/add_more"
        android:textColor="@color/colorAccent"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/title"
        android:layout_alignParentBottom="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:layout_alignRight="@+id/title"
        android:layout_marginBottom="16dp"
        android:padding="8dp"
        android:text="@string/add"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/title"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/title"
        android:layout_marginBottom="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:padding="8dp"
        android:text="@string/cancel"
        android:textSize="15sp" />

</RelativeLayout>