<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    app:cardBackgroundColor="@color/card_grey"
    app:cardCornerRadius="2dp"
    app:cardElevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="6dp">

        <View
            android:id="@+id/image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/circle" />

        <ImageView
            android:id="@+id/edit"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_edit" />

        <TextView
            android:id="@+id/nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/image"
            android:includeFontPadding="false"
            android:maxLines="2"
            android:text="@string/donald"
            android:textColor="@color/grey1"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/nickname"
            android:layout_below="@+id/nickname"
            android:layout_marginLeft="6dp"
            android:layout_toRightOf="@+id/nickname"
            android:includeFontPadding="false"
            android:text="@string/donald_dumb"
            android:textColor="@color/grey4"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nickname"
            android:layout_marginTop="6dp"
            android:layout_toRightOf="@+id/image"
            android:includeFontPadding="false"
            android:maxLines="3"
            android:text="@string/comment"
            android:textColor="@color/grey2"
            android:textSize="12sp" />

    </RelativeLayout>

</android.support.v7.widget.CardView>
